--- a/project/amped/index.html
+++ b/project/amped/index.html
@@ -47,7 +47,7 @@
         <div class="wrapper">
             <h1>Amped Branding</h1>
             <hr>
-            <p class="project-desc">My first branding assignment I was tasked to develop a logo for music night, Amped. For my design I created a simplistic icon that took the basic shape of a flying v guitar and combined this with the letter 'A'.</p>
+            <p class="project-desc">In my first branding assignment I was tasked to develop a logo for music night, Amped. For my design I created a simplistic icon that took the basic shape of a flying v guitar, which I combined this with the letter 'A'.</p>
 
             <div class="row">
                 <div class="col-sm-6">
