--- a/project/miscom/index.html
+++ b/project/miscom/index.html
@@ -47,7 +47,7 @@
         <div class="wrapper">
             <h1>Miscommunication</h1>
             <hr>
-            <p class="project-desc">Miscommunication is an experimental typography piece intended to show how technology has affected our ability to communicate effectively. </p>
+            <p class="project-desc">Miscommunication is an experimental typography piece. It is intended to show how technology has affected our ability to communicate effectively. </p>
 
             <div class="row">
                 <div class="col-sm-4">
