--- a/project/vinyl/index.html
+++ b/project/vinyl/index.html
@@ -47,7 +47,7 @@
         <div class="wrapper">
             <h1>Tame Impala Vinyl</h1>
             <hr>
-            <p class="project-desc">This is an editorial brief in which I had to design music packaging for Tame Impala. I designed a a vinyl cover as well as a zine which contained information about the artist. The cover included experimental type with a pattern overlayed and I created imagery to be used within the zine.</p>
+            <p class="project-desc">This is an editorial brief in which I had to design music packaging for Tame Impala. I designed a a vinyl cover, as well as a zine which contained information about the artist. The cover included experimental type with a pattern overlayed. I also designed different imagery to be used within the zine, using a mix of photography and digital techniques.</p>
 
             <div class="row">
                 <div class="col-sm-12">
