tofy desc update

--- a/project/tofy/index.html
+++ b/project/tofy/index.html
@@ -47,7 +47,7 @@
         <div class="wrapper">
             <h1>TOFY Branding</h1>
             <hr>
-            <p class="project-desc">The Over Fifties Youth Club is an organisation intended to give people over the age of 50 new experiences to keep them active. The brief I was given was focused around branding and advertising the club.</p>
+            <p class="project-desc">The Over Fifties Youth Club is an organisation intended to give people over the age of 50 new experiences to keep them active. The brief I was given was focused around branding and advertising the club. The icon that I designed showed a dog balancing a ball, intended to emphasise the idea of 'old dogs, new tricks'. This concept linked to the club as it is about teaching new skills, and giving people new experiences.</p>
 
             <div class="row">
                 <div class="col-sm-6">
