google font fix

--- a/project/monograms/index.html
+++ b/project/monograms/index.html
@@ -8,7 +8,7 @@
         <title>Matthew Goodyear | Monogram Project</title>
 
         <!-- Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
         <!-- Script -->
         <script src="https://use.fontawesome.com/43b23a385d.js"></script>
