new project pages

--- a/index.html
+++ b/index.html
@@ -49,12 +49,50 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a class="media" href="/project/monograms">
-                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
+                    <a class="media" href="/project/parmohouse">
+                        <img src="img/phlogo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Monograms</p>
+                                <p>The Parmo House Branding</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-4">
+                    <a class="media" href="/project/cities">
+                        <img src="img/cities.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Cities Project</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-4">
+                    <a class="media" href="/project/ss17">
+                        <img src="img/ss17logo.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Summer Show Branding</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <a class="media" href="/project/vinyl">
+                        <img src="img/vinyl.png" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Tame Impala Vinyl</p>
                             </div>
                         </div>
                     </a>
@@ -111,12 +149,12 @@
                 </div>
 
                 <div class="col-sm-4">
-                    <a class="media" href="/project/vinyl">
-                        <img src="img/vinyl.png" alt="work" class="media-img">
+                    <a class="media" href="/project/monograms">
+                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Tame Impala Vinyl Cover</p>
+                                <p>Monograms</p>
                             </div>
                         </div>
                     </a>
