--- a/project/vinyl/index.html
+++ b/project/vinyl/index.html
@@ -51,7 +51,7 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                      <img src="../../img/vinyl/vinyl.png" alt="work" class="media-img project-img">
+                      <img src="../../img/vinyl/vinyl.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
