cities and paramo content

--- a/project/cities/index.html
+++ b/project/cities/index.html
@@ -45,37 +45,35 @@
 
 
         <div class="wrapper">
-            <h1>Tame Impala Vinyl</h1>
+            <h1>Cities Project</h1>
             <hr>
-            <p class="project-desc">This is an editorial brief in which I had to design music packaging for Tame Impala. I designed a a vinyl cover, as well as a zine which contained information about the artist. The cover included experimental type with a pattern overlayed. I also designed different imagery to be used within the zine, using a mix of photography and digital techniques.</p>
+            <p class="project-desc"></p>
 
             <div class="row">
                 <div class="col-sm-12">
-                      <img src="../../img/vinyl/vinyl.jpg" alt="work" class="media-img project-img">
+                      <img src="../../img/londontee.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/paristee.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/newyorktee.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-6">
-                      <img src="../../img/vinyl/booklet1.jpg" alt="work" class="media-img project-img">
+                      <img src="../../img/seattle.jpg" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-6">
-                      <img src="../../img/vinyl/booklet2.jpg" alt="work" class="media-img project-img">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4">
-                      <img src="../../img/vinyl/design1.png" alt="work" class="media-img project-img">
-                </div>
-
-                <div class="col-sm-4">
-                      <img src="../../img/vinyl/design2.png" alt="work" class="media-img project-img">
-                </div>
-
-                <div class="col-sm-4">
-                      <img src="../../img/vinyl/design3.png" alt="work" class="media-img project-img">
+                      <img src="../../img/kuala.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
