--- a/project/sheffield/index.html
+++ b/project/sheffield/index.html
@@ -50,18 +50,18 @@
             <p class="project-desc">This was my most challenging brief, in which I was tasked to create a brand for Sheffield. Sheffield is known as the Steel City; I designed different icons that relate to this, as well as using the basic shape from the coat of arms.</p>
 
             <div class="row">
-                <div class="col-sm-6">
-                      <img src="../../img/sheffield.jpg" alt="work" class="media-img project-img">
-                </div>
-
-                <div class="col-sm-6">
-                      <img src="../../img/sheffield-2.jpg" alt="work" class="media-img project-img">
+                <div class="col-sm-12">
+                      <img src="../../img/sheff.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-12">
-                      <img src="../../img/sheffield-sign.jpg" alt="work" class="media-img project-img">
+                <div class="col-sm-6">
+                      <img src="../../img/sheff2.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-6">
+                      <img src="../../img/sheff3.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
