--- a/index.html
+++ b/index.html
@@ -31,14 +31,9 @@
 
     <body>
         <header>
-            <div class="name-container">
-                <div class="name name-left">matthew</div><!--
-                --><div class="name name-right">goodyear</div>
-            </div>
-
             <div class="logo-container">
                 <a class="logo-link" href="/">
-                    <img src="img/logo.jpg" alt="Logo" class="logo-img">
+                    <img src="img/logo.png" alt="Logo" class="logo-img">
                 </a>
             </div>
         </header>
@@ -145,7 +140,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="img/mg-monogram.jpg" alt="work" class="media-img">
+                    <img src="img/logo2.png" alt="work" class="media-img">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
