--- a/project/monograms/index.html
+++ b/project/monograms/index.html
@@ -41,7 +41,7 @@
         <div class="wrapper">
             <h1>Monograms</h1>
             <hr>
-            <p class="project-desc">This is a personal project aimed at bettering my design skills by creating various monograms, all based on a minimal design style. Follow me on <a href="https://www.instagram.com/matthewgoodyear/" class="social-link">Instagram</a> to be updated on new designs.</p>
+            <p class="project-desc">This is a personal project aimed at bettering my design skills by creating various monograms, all based on a minimal design style. Follow me on <a href="https://www.instagram.com/designer.matt/" class="social-link">Instagram</a> to be updated on new designs.</p>
 
             <div class="row center-xs">
                 <div class="col-sm-4">
@@ -57,11 +57,11 @@
 
             <h1>Contact</h1>
             <hr>
-            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
+            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</p>
 
             <div class="row center-xs">
                 <div class="col-sm-4">
-                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/matthewgoodyear/"></a>
+                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/designer.matt/"></a>
                     <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
                     <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="mailto:hello@matthewgoodyear.com"></a>
                 </div>
