--- a/project/vinyl/index.html
+++ b/project/vinyl/index.html
@@ -82,11 +82,11 @@
 
             <h1>Contact</h1>
             <hr>
-            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
+            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</p>
 
             <div class="row center-xs">
                 <div class="col-sm-4">
-                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/matthewgoodyear/"></a>
+                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/designer.matt/"></a>
                     <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
                     <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="mailto:hello@matthewgoodyear.com"></a>
                 </div>
