--- a/project/cities/index.html
+++ b/project/cities/index.html
@@ -81,7 +81,7 @@
         <div class="about">
             <h1>About</h1>
             <hr>
-            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK.</p>
+            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I am currently a Creative Intern at Better Brand Agency.</p>
 
             <h1>Contact</h1>
             <hr>
