--- a/project/parmohouse/index.html
+++ b/project/parmohouse/index.html
@@ -31,14 +31,9 @@
 
     <body>
         <header>
-            <div class="name-container">
-                <div class="name name-left">matthew</div><!--
-                --><div class="name name-right">goodyear</div>
-            </div>
-
             <div class="logo-container">
                 <a class="logo-link" href="/">
-                    <img src="../../img/logo.jpg" alt="Logo" class="logo-img">
+                    <img src="../../img/logo.png" alt="Logo" class="logo-img">
                 </a>
             </div>
         </header>
