--- a/index.html
+++ b/index.html
@@ -41,21 +41,10 @@
         <div class="wrapper">
             <h1>Projects</h1>
             <hr>
+            <p class="project-desc"></p>
 
             <div class="row">
-                <div class="col-sm-4">
-                    <a class="media" href="/project/parmohouse">
-                        <img src="img/phlogo.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>The Parmo House Branding</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <a class="media" href="/project/cities">
                         <img src="img/cities.jpg" alt="work" class="media-img">
 
@@ -67,13 +56,39 @@
                     </a>
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6">
+                    <a class="media" href="/project/vinyl">
+                        <img src="img/vinyl.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>The Less I Know The Better<p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <a class="media" href="/project/parmohouse">
+                        <img src="img/phlogo.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>The Parmo House</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6">
                     <a class="media" href="/project/ss17">
                         <img src="img/ss17logo.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Summer Show Branding</p>
+                                <p>CCAD Summer Show 2017</p>
                             </div>
                         </div>
                     </a>
@@ -81,57 +96,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-4">
-                    <a class="media" href="/project/vinyl">
-                        <img src="img/vinyl.png" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Tame Impala Vinyl</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
-                    <a class="media" href="/project/tofy">
-                        <img src="img/tofy-badge.png" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>TOFY Branding</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
-                    <a class="media" href="/project/miscom">
-                        <img src="img/miscommunication.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Miscommunication</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4">
-                    <a class="media" href="/project/amped">
-                        <img src="img/amped-logo.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Amped Music Night</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <a class="media" href="/project/sheffield">
                         <img src="img/sheffield.jpg" alt="work" class="media-img">
 
@@ -143,13 +108,39 @@
                     </a>
                 </div>
 
-                <div class="col-sm-4">
-                    <a class="media" href="/project/monograms">
+                <div class="col-sm-6">
+                    <a class="media" href="/project/amped">
+                        <img src="img/amped-icon.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Amped Music Night</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <a class="media" href="/project/miscom">
+                        <img src="img/miscommunication.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Miscommunication</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6">
+                    <a class="media" href="/project/logo">
                         <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Monograms</p>
+                                <p>Logo Collection</p>
                             </div>
                         </div>
                     </a>
