--- a/project/amped/index.html
+++ b/project/amped/index.html
@@ -40,17 +40,13 @@
 
 
         <div class="wrapper">
-            <h1>Amped Branding</h1>
+            <h1>Amped Music Night</h1>
             <hr>
-            <p class="project-desc">In my first branding assignment I was tasked to develop a logo for music night, Amped. For my design I created a simplistic icon that took the basic shape of a flying v guitar, which I combined this with the letter 'A'.</p>
+            <p class="project-desc"></p>
 
             <div class="row">
-                <div class="col-sm-6">
-                      <img src="../../img/amped-icon.jpg" alt="work" class="media-img project-img">
-                </div>
-
-                <div class="col-sm-6">
-                      <img src="../../img/amped-logo.jpg" alt="work" class="media-img project-img">
+                <div class="col-sm-12">
+                      <img src="../../img/ampedbanner.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
@@ -90,7 +86,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="../../img/mg-monogram.jpg" alt="work" class="media-img">
+                    <img src="../../img/logo2.png" alt="Logo">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
