--- a/project/logo/index.html
+++ b/project/logo/index.html
@@ -39,13 +39,49 @@
         </header>
 
         <div class="wrapper">
-            <h1>Monograms</h1>
+            <h1>Logo Collection</h1>
             <hr>
-            <p class="project-desc">This is a personal project aimed at bettering my design skills by creating various monograms, all based on a minimal design style. Follow me on <a href="https://www.instagram.com/designer.matt/" class="social-link">Instagram</a> to be updated on new designs.</p>
+            <p class="project-desc"></p>
 
             <div class="row center-xs">
                 <div class="col-sm-4">
                       <img src="../../img/azmonogram.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/lumo.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/mg.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row center-xs">
+                <div class="col-sm-4">
+                      <img src="../../img/mykri.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/tofy1.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/tofy2.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row center-xs">
+                <div class="col-sm-4">
+                      <img src="../../img/chatdog.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/l.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/stek.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
@@ -71,7 +107,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="../../img/mg-monogram.jpg" alt="work" class="media-img">
+                    <img src="../../img/logo2.png" alt="Logo">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
