--- a/project/miscom/index.html
+++ b/project/miscom/index.html
@@ -42,19 +42,35 @@
         <div class="wrapper">
             <h1>Miscommunication</h1>
             <hr>
-            <p class="project-desc">Miscommunication is an experimental typography piece. It is intended to show how technology has affected our ability to communicate effectively. </p>
+            <p class="project-desc"></p>
 
             <div class="row">
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-1.jpg" alt="work" class="media-img project-img">
+                <div class="col-sm-12">
+                      <img src="../../img/miscombanner.jpg" alt="work" class="media-img project-img">
                 </div>
+            </div>
 
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-2.jpg" alt="work" class="media-img project-img">
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/miscombanner2.jpg" alt="work" class="media-img project-img">
                 </div>
+            </div>
 
-                <div class="col-sm-4">
-                      <img src="../../img/miscom-3.jpg" alt="work" class="media-img project-img">
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/miscom-01.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/miscom-02.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/miscom-03.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
@@ -80,7 +96,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="../../img/mg-monogram.jpg" alt="work" class="media-img">
+                    <img src="../../img/logo2.png" alt="Logo">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
