--- a/project/ss17/index.html
+++ b/project/ss17/index.html
@@ -40,37 +40,23 @@
 
 
         <div class="wrapper">
-            <h1>Tame Impala Vinyl</h1>
+            <h1>CCAD Summer Show 2017</h1>
             <hr>
-            <p class="project-desc">This is an editorial brief in which I had to design music packaging for Tame Impala. I designed a a vinyl cover, as well as a zine which contained information about the artist. The cover included experimental type with a pattern overlayed. I also designed different imagery to be used within the zine, using a mix of photography and digital techniques.</p>
+            <p class="project-desc"></p>
 
             <div class="row">
                 <div class="col-sm-12">
-                      <img src="../../img/vinyl/vinyl.jpg" alt="work" class="media-img project-img">
+                      <img src="../../img/teaser2.gif" alt="work" class="media-img project-img">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-6">
-                      <img src="../../img/vinyl/booklet1.jpg" alt="work" class="media-img project-img">
+                      <img src="../../img/teaser1.gif" alt="work" class="media-img project-img">
                 </div>
 
                 <div class="col-sm-6">
-                      <img src="../../img/vinyl/booklet2.jpg" alt="work" class="media-img project-img">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4">
-                      <img src="../../img/vinyl/design1.png" alt="work" class="media-img project-img">
-                </div>
-
-                <div class="col-sm-4">
-                      <img src="../../img/vinyl/design2.png" alt="work" class="media-img project-img">
-                </div>
-
-                <div class="col-sm-4">
-                      <img src="../../img/vinyl/design3.png" alt="work" class="media-img project-img">
+                      <img src="../../img/ss17-poster.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
@@ -82,11 +68,11 @@
 
             <h1>Contact</h1>
             <hr>
-            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
+            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</p>
 
             <div class="row center-xs">
                 <div class="col-sm-4">
-                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/matthewgoodyear/"></a>
+                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/designer.matt/"></a>
                     <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
                     <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="mailto:hello@matthewgoodyear.com"></a>
                 </div>
@@ -96,7 +82,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="../../img/mg-monogram.jpg" alt="work" class="media-img">
+                    <img src="../../img/logo2.png" alt="Logo">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
