--- a/project/cities/index.html
+++ b/project/cities/index.html
@@ -46,29 +46,31 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                      <img src="../../img/londontee.jpg" alt="work" class="media-img project-img">
+                      <img src="../../img/paris.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-12">
-                      <img src="../../img/paristee.jpg" alt="work" class="media-img project-img">
+                      <img src="../../img/newyork.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-sm-12">
-                      <img src="../../img/newyorktee.jpg" alt="work" class="media-img project-img">
+                      <img src="../../img/london.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                       <img src="../../img/seattle.jpg" alt="work" class="media-img project-img">
                 </div>
+            </div>
 
-                <div class="col-sm-6">
-                      <img src="../../img/kuala.jpg" alt="work" class="media-img project-img">
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/paris-tee.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
@@ -76,15 +78,15 @@
         <div class="about">
             <h1>About</h1>
             <hr>
-            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I am currently a Creative Intern at Better Brand Agency.</p>
+            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I'm currently a Junior Designer at <a href="https://www.betterbrandagency.com/">Better Brand Agency</a>.</p>
 
             <h1>Contact</h1>
             <hr>
-            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/matthewgoodyear/">Instagram</a>.</p>
+            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</p>
 
             <div class="row center-xs">
                 <div class="col-sm-4">
-                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/matthewgoodyear/"></a>
+                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/designer.matt/"></a>
                     <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
                     <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="mailto:hello@matthewgoodyear.com"></a>
                 </div>
@@ -94,7 +96,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="../../img/mg-monogram.jpg" alt="work" class="media-img">
+                    <img src="../../img/logo2.png" alt="Logo">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
