--- a/project/sheffield/index.html
+++ b/project/sheffield/index.html
@@ -42,7 +42,7 @@
         <div class="wrapper">
             <h1>Sheffield Branding</h1>
             <hr>
-            <p class="project-desc">This was my most challenging brief, in which I was tasked to create a brand for Sheffield. Sheffield is known as the Steel City; I designed different icons that relate to this, as well as using the basic shape from the coat of arms.</p>
+            <p class="project-desc"></p>
 
             <div class="row">
                 <div class="col-sm-12">
@@ -51,11 +51,13 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                       <img src="../../img/sheff2.jpg" alt="work" class="media-img project-img">
                 </div>
+            </div>
 
-                <div class="col-sm-6">
+            <div class="row">
+                <div class="col-sm-12">
                       <img src="../../img/sheff3.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
@@ -82,7 +84,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="../../img/mg-monogram.jpg" alt="work" class="media-img">
+                    <img src="../../img/logo2.png" alt="Logo">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
