--- a/project/vinyl/index.html
+++ b/project/vinyl/index.html
@@ -40,9 +40,9 @@
 
 
         <div class="wrapper">
-            <h1>Tame Impala Vinyl</h1>
+            <h1>The Less I Know The Better</h1>
             <hr>
-            <p class="project-desc">This is an editorial brief in which I had to design music packaging for Tame Impala. I designed a a vinyl cover, as well as a zine which contained information about the artist. The cover included experimental type with a pattern overlayed. I also designed different imagery to be used within the zine, using a mix of photography and digital techniques.</p>
+            <p class="project-desc"></p>
 
             <div class="row">
                 <div class="col-sm-12">
@@ -51,25 +51,29 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                       <img src="../../img/vinyl/booklet1.jpg" alt="work" class="media-img project-img">
                 </div>
+            </div>
 
-                <div class="col-sm-6">
+            <div class="row">
+                <div class="col-sm-12">
                       <img src="../../img/vinyl/booklet2.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm-4">
-                      <img src="../../img/vinyl/design1.png" alt="work" class="media-img project-img">
+                <div class="col-sm-12">
+                      <img src="../../img/vinyl/booklet3.jpg" alt="work" class="media-img project-img">
                 </div>
+            </div>
 
-                <div class="col-sm-4">
+            <div class="row">
+                <div class="col-sm-6">
                       <img src="../../img/vinyl/design2.png" alt="work" class="media-img project-img">
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                       <img src="../../img/vinyl/design3.png" alt="work" class="media-img project-img">
                 </div>
             </div>
@@ -96,7 +100,7 @@
         <footer>
             <div class="row center-xs">
                 <div class="col-xs-3">
-                    <img src="../../img/mg-monogram.jpg" alt="work" class="media-img">
+                    <img src="../../img/logo2.png" alt="Logo">
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
