--- a/project/logo/index.html
+++ b/project/logo/index.html
@@ -89,7 +89,7 @@
         <div class="about">
             <h1>About</h1>
             <hr>
-            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK.</p>
+            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I'm currently working as a Junior Designer at <a href="https://www.betterbrandagency.com/">Better Brand Agency</a>.</p>
 
             <h1>Contact</h1>
             <hr>
