--- a/project/cities/index.html
+++ b/project/cities/index.html
@@ -75,6 +75,12 @@
             </div>
         </div>
 
+        <div class="row center-xs">
+            <a href="mailto:hello@matthewgoodyear.com" class="contact-btn col-xs-6 col-sm-3 col-md-2">
+                <p>Get in Touch</p>
+            </a>
+        </div>
+
         <div class="about">
             <h1>About</h1>
             <hr>
