--- a/project/ss17/index.html
+++ b/project/ss17/index.html
@@ -51,14 +51,28 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-6">
-                      <img src="../../img/teaser1.gif" alt="work" class="media-img project-img">
-                </div>
-
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                       <img src="../../img/ss17-poster.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/ss17-flyer.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/ss17-tee.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+        </div>
+
+        <div class="row center-xs">
+            <a href="mailto:hello@matthewgoodyear.com" class="contact-btn col-xs-6 col-sm-3 col-md-2">
+                <p>Get in Touch</p>
+            </a>
         </div>
 
         <div class="about">
