--- a/project/ss17/index.html
+++ b/project/ss17/index.html
@@ -52,6 +52,12 @@
 
             <div class="row">
                 <div class="col-sm-12">
+                      <img src="../../img/ss17-icons.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
                       <img src="../../img/ss17-poster.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
@@ -59,6 +65,12 @@
             <div class="row">
                 <div class="col-sm-12">
                       <img src="../../img/ss17-flyer.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                      <img src="../../img/ss17-tote.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
 
