--- a/project/cities/index.html
+++ b/project/cities/index.html
@@ -70,6 +70,12 @@
 
             <div class="row">
                 <div class="col-sm-12">
+                      <img src="../../img/kuala.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
                       <img src="../../img/paris-tee.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
