--- a/project/sheffield/index.html
+++ b/project/sheffield/index.html
@@ -30,6 +30,18 @@
 
 
     <body>
+        <div class="sticky-header sticky-hide">
+            <div class="sticky-container">
+                <div class="sticky-logo">
+                    <img src="../../img/mg-full.png" alt="">
+                </div>
+
+                <a href="mailto:hello@matthewgoodyear.com" class="sticky-contact-btn">
+                    <p>Contact</p>
+                </a>
+            </div>
+        </div>
+
         <header>
             <div class="logo-container">
                 <a class="logo-link" href="/">
@@ -95,5 +107,6 @@
                 </div>
             </div>
         </footer>
+        <script type="text/javascript" src="../../scripts/header.js"></script>
     </body>
 </html>
