--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
                 </div>
 
                 <div class="col-sm-6">
+                    <a class="media" href="/project/logo">
+                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>Logo Collection</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- <div class="col-sm-6">
                     <a class="media" href="/project/amped">
                         <img src="img/amped-icon.jpg" alt="work" class="media-img">
 
@@ -130,10 +142,10 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
             </div>
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-sm-6">
                     <a class="media" href="/project/miscom">
                         <img src="img/miscommunication.jpg" alt="work" class="media-img">
@@ -157,7 +169,7 @@
                         </div>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="row center-xs">
