--- a/project/cities/index.html
+++ b/project/cities/index.html
@@ -57,6 +57,32 @@
             <p class="project-desc"></p>
 
             <div class="row">
+                <div class="col-sm-6">
+                      <img src="../../img/city-icons/paris.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-6">
+                      <img src="../../img/city-icons/newyork.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-4">
+                      <img src="../../img/city-icons/london.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/city-icons/seattle.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/city-icons/kuala.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <hr class="divider">
+
+            <div class="row">
                 <div class="col-sm-12">
                       <img src="../../img/paris.jpg" alt="work" class="media-img project-img">
                 </div>
