--- a/project/logo/index.html
+++ b/project/logo/index.html
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="col-sm-4">
-                      <img src="../../img/stek.jpg" alt="work" class="media-img project-img">
+                      <img src="../../img/amped-icon.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
