--- a/project/amped/index.html
+++ b/project/amped/index.html
@@ -86,7 +86,7 @@
         <div class="about">
             <h1>About</h1>
             <hr>
-            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I'm currently working as a Junior Designer at <a href="https://www.betterbrandagency.com/">Better Brand Agency</a>.</p>
+            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I'm currently a Junior Designer at <a href="https://www.betterbrandagency.com/">Better Brand Agency</a>.</p>
 
             <h1>Contact</h1>
             <hr>
