--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
         <title>Matthew Goodyear | Graphic Designer</title>
 
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
         <!-- Fonts -->
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
@@ -172,15 +174,13 @@
             </div> -->
         </div>
 
-        <div class="row center-xs">
+        <!-- <div class="row center-xs">
             <a href="mailto:hello@matthewgoodyear.com" class="contact-btn col-xs-6 col-sm-3 col-md-2">
                 <p>Get in Touch</p>
             </a>
-        </div>
+        </div> -->
 
-
-
-        <div class="about">
+        <!-- <div class="about">
             <h1>About</h1>
             <hr>
             <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I'm currently a Junior Designer at <a href="https://www.betterbrandagency.com/">Better Brand Agency</a>.</p>
@@ -205,7 +205,21 @@
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
+        </footer> -->
+
+        <footer>
+            <div class="row">
+                <div class="col-sm-6 col-xs-12">
+                    <!-- <img src="../../img/logo2.png" alt="Logo"> -->
+                    <p class="links"><a href="https://www.instagram.com/designer.matt/">INSTAGRAM</a> | <a href="mailto:hello@matthewgoodyear.com">EMAIL</a> | <a href="https://500px.com/matthewgoodyear">500PX</a></p>
+                </div>
+
+                <div class="col-sm-6 col-xs-12">
+                    <p>&copy; Matthew Goodyear 2017</p>
+                </div>
+            </div>
         </footer>
+
         <script type="text/javascript" src="/scripts/header.js"></script>
     </body>
 </html>
