--- a/project/amped/index.html
+++ b/project/amped/index.html
@@ -7,6 +7,8 @@
 
         <title>Matthew Goodyear | Amped</title>
 
+        <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
+
         <!-- Fonts -->
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
@@ -77,7 +79,7 @@
             </div>
         </div>
 
-        <div class="row center-xs">
+        <!-- <div class="row center-xs">
             <a href="mailto:hello@matthewgoodyear.com" class="contact-btn col-xs-6 col-sm-3 col-md-2">
                 <p>Get in Touch</p>
             </a>
@@ -108,7 +110,21 @@
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
+        </footer> -->
+
+        <footer>
+            <div class="row">
+                <div class="col-sm-6 col-xs-12">
+                    <!-- <img src="../../img/logo2.png" alt="Logo"> -->
+                    <p class="links"><a href="https://www.instagram.com/designer.matt/">INSTAGRAM</a> | <a href="mailto:hello@matthewgoodyear.com">EMAIL</a> | <a href="https://500px.com/matthewgoodyear">500PX</a></p>
+                </div>
+
+                <div class="col-sm-6 col-xs-12">
+                    <p>&copy; Matthew Goodyear 2017</p>
+                </div>
+            </div>
         </footer>
+
         <script type="text/javascript" src="../../scripts/header.js"></script>
     </body>
 </html>
