--- a/project/ss17/index.html
+++ b/project/ss17/index.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
 
-        <title>Matthew Goodyear | Tame Impala Vinyl</title>
+        <title>Matthew Goodyear | CCAD Summer Show</title>
+
+        <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
 
         <!-- Fonts -->
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
@@ -93,7 +95,7 @@
             </div>
         </div>
 
-        <div class="row center-xs">
+        <!-- <div class="row center-xs">
             <a href="mailto:hello@matthewgoodyear.com" class="contact-btn col-xs-6 col-sm-3 col-md-2">
                 <p>Get in Touch</p>
             </a>
@@ -124,7 +126,21 @@
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
+        </footer> -->
+
+        <footer>
+            <div class="row">
+                <div class="col-sm-6 col-xs-12">
+                    <!-- <img src="../../img/logo2.png" alt="Logo"> -->
+                    <p class="links"><a href="https://www.instagram.com/designer.matt/">INSTAGRAM</a> | <a href="mailto:hello@matthewgoodyear.com">EMAIL</a> | <a href="https://500px.com/matthewgoodyear">500PX</a></p>
+                </div>
+
+                <div class="col-sm-6 col-xs-12">
+                    <p>&copy; Matthew Goodyear 2017</p>
+                </div>
+            </div>
         </footer>
+        
         <script type="text/javascript" src="../../scripts/header.js"></script>
     </body>
 </html>
