--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>The Less I Know The Better<p>
+                                <p>The Less I Know The Better</p>
                             </div>
                         </div>
                     </a>
