--- a/project/amped/index.html
+++ b/project/amped/index.html
@@ -115,8 +115,11 @@
         <footer>
             <div class="row">
                 <div class="col-sm-6 col-xs-12">
-                    <!-- <img src="../../img/logo2.png" alt="Logo"> -->
-                    <p class="links"><a href="https://www.instagram.com/designer.matt/">INSTAGRAM</a> | <a href="mailto:hello@matthewgoodyear.com">EMAIL</a> | <a href="https://500px.com/matthewgoodyear">500PX</a></p>
+                    <ul class="links">
+                        <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
+                     --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
+                     --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
+                --></ul>
                 </div>
 
                 <div class="col-sm-6 col-xs-12">
