--- a/project/vinyl/index.html
+++ b/project/vinyl/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
 
-        <div class="row center-xs">
+        <!-- <div class="row center-xs">
             <a href="mailto:hello@matthewgoodyear.com" class="contact-btn col-xs-6 col-sm-3 col-md-2">
                 <p>Get in Touch</p>
             </a>
@@ -122,7 +122,24 @@
                     <p>&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
+        </footer> -->
+
+        <footer>
+            <div class="row">
+                <div class="col-sm-6 col-xs-12">
+                    <ul class="links">
+                        <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
+                     --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
+                     --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
+                --></ul>
+                </div>
+
+                <div class="col-sm-6 col-xs-12">
+                    <p>&copy; Matthew Goodyear 2017</p>
+                </div>
+            </div>
         </footer>
+        
         <script type="text/javascript" src="../../scripts/header.js"></script>
     </body>
 </html>
